Fixed dropdown menu being too narrow

--- a/styles5.css
+++ b/styles5.css
@@ -978,7 +978,7 @@ header #navArea #navMobile .borderBox #dropDown {
 
     header #navArea #navMobile .borderBox #dropDown {
         position: absolute;
-        width: 494.5%;
+        width: 500%;
         height: 275%;
         top: 50%;
         left: -200%;
@@ -1110,7 +1110,7 @@ header #navArea #navMobile .borderBox #dropDown {
 
     header #navArea #navMobile .borderBox #dropDown {
         position: absolute;
-        width: 494.5%;
+        width: 500%;
         height: 275%;
         top: 50%;
         left: -200%;
